platform/cilium-monitoring/l7-visibility-argocd-server.ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: l7-visibility-argocd-server
  namespace: argocd
spec:
  enableDefaultDeny:
    ingress: false
    egress: false
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-server
  ingress:
    - fromEntities:
        - all
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
          rules:
            http:
              - {}
