platform/cilium-monitoring/l7-visibility-grafana.ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: l7-visibility-grafana
  namespace: monitoring
spec:
  enableDefaultDeny:
    ingress: false
    egress: false
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: grafana
  ingress:
    - fromEntities:
        - all
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
          rules:
            http:
              - {}
